Frankbelford/uatv1ba/force-app/main/default/objects/Idea_Comments__c/Idea_Comments__c.object-meta.xml
<CustomObject>
    <description>Comments or recording of vote to Idea</description>
    <label>Idea Comment</label>
    <nameField>
        <displayFormat>IDEACOM-{0000}</displayFormat>
        <label>Idea Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>