Frankbelford/uatv1ba/force-app/main/default/objects/Idea_Comments__c/fields/IP_Idea__c.field-meta.xml
<CustomField>
    <fullName>IP_Idea__c</fullName>
    <label>Idea</label>
    <referenceTo>Idea__c</referenceTo>
    <relationshipLabel>Idea Comments</relationshipLabel>
    <relationshipName>Idea_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>