Frankbelford/uatv1ba/force-app/main/default/objects/Idea_Comments__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upvoted</fullName>
            </value>
            <value>
                <fullName>Downvoted</fullName>
                <label>Refused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>