Frankbelford/uatv1ba/force-app/main/default/objects/Idea_Comments__c/recordTypes/Comment.recordType-meta.xml
<RecordType>
    <fullName>Comment</fullName>
    <active>true</active>
    <label>Comment</label>
</RecordType>