Frankbelford/uatv1ba/force-app/main/default/objects/Idea_Comments__c/recordTypes/Vote.recordType-meta.xml
<RecordType>
    <fullName>Vote</fullName>
    <active>true</active>
    <label>Vote</label>
</RecordType>